feat: working login

--- a/3.JoinGameView/main.html
+++ b/3.JoinGameView/main.html
@@ -11,5 +11,9 @@
         <div class="row" id="games">
 
         </div>
+
+
+        <script src="../script.js"></script>
+        <script src="myScript.js"></script>
     </body>
 </html>
