feat: see available games

--- a/3.JoinGameView/main.html
+++ b/3.JoinGameView/main.html
@@ -8,8 +8,10 @@
     <body>
         <h1 class="title">Unirse a Juego</h1>
 
-        <div class="row" id="games">
-
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-8" id="games"></div>
+            <div class="col-2"></div>
         </div>
 
         <script src="myScript.js"></script>
