feat: socket init

--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    Hello world
+
+    <div class="row">
+        <div class="col-6 fix"><h1>Pregunton</h1></div>
+        <div class="col-6 fix time"><h1>120</h1></div>
+    </div>
+    
+
+    <div class="row">
+        <div class="col-2"></div>
+
+        <div class="col-8">
+            Hello world
+        </div>
+
+        <div class="col-2"></div>
+    </div>
+
+    <div class="footer">
+        <div class="column">Nombre:</div>
+        <div class="column">Faltas:</div>
+        <div class="column">Puntos:</div>
+        <div class="column">Actualmente eres el Pregunton</div>
+    </div>
+    
     <script src="myScript.js"></script>
 </body>
