--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -15,8 +15,11 @@
     <div class="row">
         <div class="col-2"></div>
 
-        <div class="col-8">
-            Hello world
+        <div class="col-8" id="main">
+            <div id="view_1">
+                <input type="number" min="1" id="rounds">
+                <button>Enter</button>
+            </div>
         </div>
 
         <div class="col-2"></div>
