--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -38,12 +38,14 @@
             </div>
 
             <div id="view_3" class="hidden">
-                <div><p id="roundQuestion">Pregunta:</p></div>
+                <div>
+                    <p>Pregunta:</p>
+                    <p id="roundQuestion"></p></div>
                 <div>
                     <label for="userAnswer">Respuesta</label>
                     <input type="text" id="userAnswer">
                 </div>
-                <div id="sendAnswer">Send</div>
+                <button id="sendAnswer">Send</button>
             </div>
 
         </div>
