--- a/2.HomeView/main.html
+++ b/2.HomeView/main.html
@@ -22,7 +22,8 @@
         
             <div class="col-2"></div>
         </div>
-
+        
+        <script src="../refresh.js"></script>
         <script src="myScript.js"></script>
     </body>
 </html>    
