--- a/6.CreateGameView/main.html
+++ b/6.CreateGameView/main.html
@@ -36,6 +36,7 @@
             <button id="create" type="submit" class="createGameButton">CREAR</button>
         </div>        
     </div>
+    <script src="../refresh.js"></script>
     <script src="myScript.js"></script>
 </body>
 </html>
