--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -48,6 +48,15 @@
                 <button id="sendAnswer">Send</button>
             </div>
 
+            <div id="view_4" class="hidden">
+                <div id="evaluateAnswers"></div>
+                <div><button id="sendQualify">Send</button></div>
+            </div>
+
+            <div id="view_5" class="hidden">
+                <div></div>
+            </div>
+
         </div>
 
         <div class="col-2"></div>
@@ -60,5 +69,6 @@
         <div class="column" id="nosy"></div>
     </div>
     
+    <script src="../refresh.js"></script>
     <script src="myScript.js"></script>
 </body>
