--- a/3.JoinGameView/main.html
+++ b/3.JoinGameView/main.html
@@ -13,7 +13,8 @@
             <div class="col-8" id="games"></div>
             <div class="col-2"></div>
         </div>
-
+        
+        <script src="../refresh.js"></script>
         <script src="myScript.js"></script>
     </body>
 </html>
