--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -54,7 +54,8 @@
             </div>
 
             <div id="view_5" class="hidden">
-                <div></div>
+                <div id="reviewAnswers"></div>
+                <div><button id="sendReview"></button></div>
             </div>
 
         </div>
