--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -8,7 +8,7 @@
 
     <div class="row">
         <div class="col-6 fix"><h1>Pregunton</h1></div>
-        <div class="col-6 fix time"><h1>120</h1></div>
+        <div class="col-6 fix time"><h1 id="clock">120</h1></div>
     </div>
     
 
@@ -55,7 +55,7 @@
 
             <div id="view_5" class="hidden">
                 <div id="reviewAnswers"></div>
-                <div><button id="sendReview"></button></div>
+                <div><button id="sendReview">Send</button></div>
             </div>
 
         </div>
