--- a/1.Login/main.html
+++ b/1.Login/main.html
@@ -7,19 +7,17 @@
     </head>
 
     <body>
-        <div class="container-background">
-            <div class="container-title">
-                <h1 class="title">Login</h1>
+        <div class="container-title">
+            <img src="./PREGUNTON..png" alt="Título del formulario" class="logo">
+        </div>
+        <div class="input-login">
+            <div class="col-8">
+                <label for="User">Username</label>
+                <input type="text" class="login" id="User">
+                <label for="Password">Password</label>
+                <input type="password" class="login" id="Password">
             </div>
-            <div class="input-login">
-                <div class="col-8">
-                    <label for="User">Username</label>
-                    <input type="text" class="login" id="User">
-                    <label for="Password">Password</label>
-                    <input type="password" class="login" id="Password">
-                </div>
-                <button id="login" class="button">Login</button>
-            </div>
+            <button id="login" class="button">Login</button>
         </div>
         <script src="myScript.js"></script>
     </body>
