--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -13,14 +13,16 @@
     
 
     <div class="row">
-        <div class="col-2"></div>
+        <div class="col-3 fix">
+            <div><ul id="players"></ul></div>
+        </div>
 
-        <div class="col-8" id="main">
+        <div class="col-9 fix" id="main">
             
             <div id="view_1" class="hidden">
                 <input type="number" min="1" id="rounds">
                 <button id="start">Enter</button>
-                <div><ul id="players"></ul></div>
+                <div id="error"></div>
             </div>
 
             <div id="view_2" class="hidden">
@@ -59,8 +61,6 @@
             </div>
 
         </div>
-
-        <div class="col-2"></div>
     </div>
 
     <div class="footer">
