--- a/3.JoinGameView/main.html
+++ b/3.JoinGameView/main.html
@@ -6,12 +6,11 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1 class="title">Unirse a Juego</h1>
-
-        <div class="row">
-            <div class="col-2"></div>
-            <div class="col-8" id="games"></div>
-            <div class="col-2"></div>
+        <div class="container-title">
+            <h1 class="title">UNIRSE A JUEGO</h1>
+        </div>
+        <div class="container-games">
+            <div id="games"></div>
         </div>
         
         <script src="../refresh.js"></script>
