--- a/6.CreateGameView/main.html
+++ b/6.CreateGameView/main.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="style.css">
     <title>CreateGameView</title>
 </head>
 <body>
-    <h1 class="title">CREAR JUEGO</h1>
+    <div class="container-title">
+        <h1 class="title">CREAR JUEGO</h1>
+    </div>
     <div class="container">
         <form id="form" action="#">
             <label class="name">NOMBRE</label>
