--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -59,6 +59,10 @@
                 <div id="reviewAnswers"></div>
                 <div><button id="sendReview">Send</button></div>
             </div>
+            
+            <div id="view_6" class="hidden">
+                <div id="winners"></div>
+            </div>
 
         </div>
     </div>
