--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -6,37 +6,45 @@
 </head>
 <body>
 
-    <div class="row">
-        <div class="col-6 fix"><h1>Pregunton</h1></div>
-        <div class="col-6 fix time"><h1 id="clock">120</h1></div>
+    <div class="container-header">
+        <img src="./PREGUNTON..png" alt="Título del formulario" class="logo">
+        <div class="timer-container">
+            <div class="timer">
+              <span id="clock" class="seconds">00</span>
+            </div>
+        </div>
     </div>
-    
 
-    <div class="row">
-        <div class="col-3 fix">
+    <div class="">
+        <div class="">
             <div><ul id="players"></ul></div>
         </div>
 
-        <div class="col-9 fix" id="main">
+        <div id="main">
             
-            <div id="view_1" class="hidden">
-                <input type="number" min="1" id="rounds">
-                <button id="start">Enter</button>
-                <div id="error"></div>
+            <div id="view_1" class="hidden view-rounds">
+                <div>
+                    <label class="dialog">*Rondas > o = a jugadores*</label>
+                </div>
+                <input type="number" min="1" id="rounds" class="input-rounds">
+                <button id="start" class="button-rounds">Enter</button>
+                <div class="error" id="error"></div>
             </div>
 
-            <div id="view_2" class="hidden">
-                <div>
-                    <label for="question">Question</label>
-                    <input type="text" id="question">
-                </div>
-                <div>
-                    <label for="answer">Answer</label>
-                    <input type="text" id="answer">
-                </div>
-                <div>
-                    <button id="sendQuestion">Send</button>
-                </div>
+            <div id="view_2" class="view-question">
+                <div class="container-view2">
+                    <div>
+                        <label for="question">Pregunta</label>
+                        <input type="text" id="question">
+                    </div>
+                    <div>
+                        <label for="answer">Respuesta</label>
+                        <input type="text" id="answer">
+                    </div>
+                    <div>
+                        <button id="sendQuestion">Send</button>
+                    </div>
+                </div>    
             </div>
 
             <div id="view_3" class="hidden">
