--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -55,6 +55,8 @@
                     <label for="userAnswer">Respuesta</label>
                     <input type="text" id="userAnswer">
                 </div>
+                <div id="API1"></div>
+                <div id="API2"></div>
                 <button id="sendAnswer">Send</button>
             </div>
 
