--- a/7.WebSocket/main.html
+++ b/7.WebSocket/main.html
@@ -31,7 +31,7 @@
                 <div class="error" id="error"></div>
             </div>
 
-            <div id="view_2" class="view-question">
+            <div id="view_2" class="hidden view-question">
                 <div class="container-view2">
                     <div>
                         <label for="question">Pregunta</label>
